prototype-runner/local-cluster/archive/k8s-demo/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-runner
  labels:
    app: test-runner
