prototype-runner/local-cluster/archive/k8s-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-runner-ui-ingress
  namespace: test-runner
spec:
  ingressClassName: nginx
  rules:
    - host: test-runner.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-runner-ui
                port:
                  number: 9000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: test-runner-service
                port:
                  number: 9001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  namespace: test-runner
spec:
  ingressClassName: nginx
  rules:
    - host: web-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app
                port:
                  number: 8000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: mock-api
                port:
                  number: 8001
          - path: /images
            pathType: Prefix
            backend:
              service:
                name: mock-api
                port:
                  number: 8001
